# audomte

./: .dockerignore  DAW_INTEGRATION.md  DEPLOYMENT.md  Dockerfile  Procfile  README.md  SHIPPING_GUIDE.md  clean_history.sh  commit_and_push.sh  fix_secrets.sh  push_release_notes.sh  push_to_github.sh  railway.json  render.yaml  test_email.py  test_sms.py
.github/workflows/: build-plugin.yml  deploy.yml
alioop-desktop/: .gitignore  QUICKSTART.md  README.md  create_icons.py  index.html  main.js  package.json
alioop-microservice-prototype/: .env.example  .gitignore  CHANGELOG.md  DELIVERY_SYSTEM.md  FIX_A2P_ERROR.md  IMPLEMENTATION_SUMMARY.md  LANDING_PAGE.md  PHONE_MASKING.md  README.md  REAL_MESSAGING_SETUP.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.1.0.md  VERIFY_NUMBERS.md  alioop.db  check_config.py  file_watcher.py  quick_email_test.py  requirements.txt  setup_sendgrid.py  setup_twilio.py  setup_twilio.sh  start.sh  start_delivery_system.sh  start_portal.py  test_delivery_setup.py  test_phone_masking.py  test_sendgrid_key.py  validate_phone.py
alioop-microservice-prototype/app/: __init__.py  db.py  main.py  schemas.py  utils.py
alioop-microservice-prototype/app/adapters/: __init__.py  messaging.py  payments.py  phone_masking.py
alioop-microservice-prototype/static/: app.js  manifest.json  service-worker.js
alioop-microservice-prototype/static/images/: README.md
alioop-microservice-prototype/templates/: delivery.html  index.html  landing.html
alioop-plugin/: AlioopPlugin.jucer  BUILD_INSTRUCTIONS.md  CMakeLists.txt  DOWNLOAD_AND_INSTALL.md  QUICKSTART.md  README.md  READY_TO_SHIP.md  REAPER_TROUBLESHOOTING.md  RELEASE_CHECKLIST.md  build-all.sh  create-github-release.sh  create-manual-package.sh  download-links-template.html  download.html
alioop-plugin/Source/: AlioopAPI.cpp  AlioopAPI.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
alioop-plugin/docs/: BUILD_GUIDE.md
alioop-plugin/installers/: README.md  build-windows-installer.bat  macos-installer.sh  windows-installer.nsi
alioop-plugin/manual-install-package/: INSTALL.txt  README.md
daw-export-scripts/: README.md
daw-export-scripts/ableton/: AlioopSendDelivery.py  README.md  alioop_standalone.py
daw-export-scripts/logic-pro/: AlioopSendDelivery.scpt  README.md
daw-export-scripts/pro-tools/: AloopSendDelivery.scpt  README.md
daw-export-scripts/studio-one/: AlioopSendDelivery.js  README.md
design-inspiration/: BRAND_COLORS.md  README.md
docs/: index.html
